# sensorsio

./: .coveragerc  .pylintrc  .style.yapf  AUTHORS.rst  LICENSE  LICENSE-Apache-2.0  LICENSE.txt  Makefile  NOTICE  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py
docs/: conf.py  index.rst
notebooks/: example.ipynb  joint_sensors.ipynb  pleiades.ipynb  sentinel2.ipynb  sentinel2_angles.ipynb  venus.ipynb
src/sensorsio/: __init__.py  ecostress.py  ecostress_coll2.py  ecostress_v2.py  hls.py  irregulargrid.py  landsat.py  master.py  mgrs.py  pleiades.py  regulargrid.py  sentinel2.py  sentinel2_l1c.py  sentinel2_l3a.py  skeleton.py  srtm.py  storage.py  utils.py  venus.py  worldclim.py
src/sensorsio/data/sentinel2/: mgrs_tiles.shx  orbits.gpkg  srs_sentinel2a.csv  srs_sentinel2b.csv  theia_s2.gpkg
src/sensorsio/data/venus/: srs_venus.csv  srs_venus.txt  theia_venus.gpkg
tests/: conftest.py  test_dem.py  test_ecostress.py  test_ecostress_v2.py  test_hls.py  test_irregulargrid.py  test_landsat.py  test_master.py  test_mgrs.py  test_regulargrid.py  test_sentinel2.py  test_sentinel2_l1c.py  test_sentinel2_l3a.py  test_skeleton.py  test_utils.py  test_venus.py  test_worldclim.py
